text st detection: v1 ok